<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe4e3e3"
    android:orientation="vertical" >
    <ImageView
        android:layout_height="90dip"
        android:layout_width="90dip"
        android:layout_marginTop="30dip"
		android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_launcher"/>
    <TextView android:id="@+id/app_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/blk"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/app_name_version"/>
    <TextView android:id="@+id/app_version_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#ff366d94"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"/>
    <TextView android:id="@+id/app_db_version_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#ff366d94"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"/>
    <TextView android:id="@+id/app_device_token"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/msg_current_device_token_null"/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1.0"
		android:fillViewport="true">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout android:id="@+id/button_update"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				style="@style/Widget.AppCompat.Button"
				android:gravity="center_vertical"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:clickable="true">
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:textColor="@color/blk"
					android:textSize="20sp"
					android:text="@string/button_update"
					android:layout_marginRight="8dip"
					android:layout_marginLeft="2dip"/>

                <TextView
                    android:id="@+id/desc_update"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="right"
                    android:text="@string/msg_app_has_latest"
                    android:textColor="@color/blk"
                    android:textSize="16sp" />
            </LinearLayout>

			<Button android:id="@+id/button_introduce"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center_vertical"
				android:layout_marginTop="4dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="@color/blk"
				android:textSize="20sp"
				android:text="@string/button_introduce"/>
			<Button android:id="@+id/button_help"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center_vertical"
				android:layout_marginTop="4dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="@color/blk"
				android:textSize="20sp"
				android:text="@string/menu_help"/>
			<Button android:id="@+id/button_home"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center_vertical"
				android:layout_marginTop="4dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="@color/blk"
				android:textSize="20sp"
				android:text="@string/button_home"/>
			<Button android:id="@+id/button_feedback"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center_vertical"
				android:layout_marginTop="4dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="@color/blk"
				android:textSize="20sp"
				android:enabled="true"
				android:text="@string/title_feedback"/>

			<Button android:id="@+id/title_download_page"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:gravity="center_vertical"
				android:layout_marginTop="4dip"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:textColor="@color/blk"
				android:textSize="20sp"
				android:enabled="true"
				android:text="@string/title_download_page"/>
		</LinearLayout>
	</ScrollView>

	<TextView android:id="@+id/copyright"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:orientation="vertical"
		android:text="@string/copyright"
		android:gravity="center"/>

</LinearLayout>
