<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ffffffff"
    android:padding="20dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#ff5c5c5c" />

        <EditText
            android:id="@+id/usr_name_input"
            style="@style/ProCityDisPopViewInput"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:inputType="none"
            android:textColor="#ff5c5c5c" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_phone"
            android:textColor="#ff5c5c5c" />

        <EditText
            android:id="@+id/tel_input"
            style="@style/ProCityDisPopViewInput"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:inputType="phone"
            android:textColor="#ff5c5c5c" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#e1e1e1"
        android:layout_marginTop="10dip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:background="#ffffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_province"
                style="@style/ProCityDisPopViewInput"
                android:layout_width="0dip"
                android:layout_weight="1.0"
                android:inputType="none"
                android:textColor="#ff5c5c5c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:textColor="#ff5c5c5c" />

            <EditText
                android:id="@+id/edit_city"
                style="@style/ProCityDisPopViewInput"
                android:layout_width="0dip"
                android:layout_weight="1.0"
                android:inputType="none"
                android:textColor="#ff5c5c5c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="#ff5c5c5c" />

            <EditText
                android:id="@+id/edit_district"
                style="@style/ProCityDisPopViewInput"
                android:layout_width="0dip"
                android:layout_weight="1.0"
                android:inputType="none"
                android:textColor="#ff5c5c5c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="#ff5c5c5c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_place_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_address_detail"
                android:textColor="#ff5c5c5c" />

            <EditText
                android:id="@+id/edit_place_detail"
                style="@style/ProCityDisPopViewInput"
                android:layout_weight="1"
                android:inputType="none"
                android:textColor="#ff5c5c5c" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_height="37dip"
        android:layout_width="180dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        style="@style/DefaultShapeButton"
        android:layout_marginTop="20dip"
        android:text="@android:string/ok"/>

</LinearLayout>